# humpty_dumpty

./: .travis.yml  Cargo.toml  README.md
examples/: close-method.rs  close-vec.rs  close.rs  close_method.rs  for-loop.rs  for_loop.rs  match.rs  test.rs
src/: lib.rs
tests/: compile_test.rs  if-return.rs  loop-break.rs  loop-continue.rs  match-return.rs
tests/compile-fail/: if-not-linear.rs  if-return.rs  match-not-linear.rs  non-linear-for-loop.rs  simple-if.rs  simple-loop.rs  unused.rs
